update stock check request when generating export